# CoTracer

./: CMakeLists.txt  Protocol_codes.h  Protocol_keys.h  authentication_session.h  authentication_tcp_client.cpp  authentication_tcp_client.h  authorization_tcp_client.cpp  authorization_tcp_client.h  base_tcp_client.cpp  base_tcp_client.h  chart_data.cpp  chart_data.h  communication_session.h  communication_tcp_client.cpp  communication_tcp_client.cpp.autosave  communication_tcp_client.h  contacts_model.cpp  contacts_model.h  days_model.cpp  days_model.h  fad_manager.cpp  file_dialog_model.cpp  file_dialog_model.h  main.cpp  path_finder.cpp  qml.qrc  settings_model.cpp  settings_model.h  user_validator.cpp  user_validator.h
android/: AndroidManifest.xml
miscellaneous/headers/: avatar_selector.h  fad_manager.h  path_finder.h  user_validator.h
miscellaneous/sources/: avatar_selector.cpp  fad_manager.cpp  path_finder.cpp  user_validator.cpp
models/headers/: chart_data.h  contacts_model.h  file_dialog_model.h  found_friends_model.h  my_friends_model.h  stat_model.h
models/sources/: chart_data.cpp  contacts_model.cpp  days_model.cpp  file_dialog_model.cpp  found_friends_model.cpp  my_friends_model.cpp  settings_model.cpp  stat_model.cpp
networking/headers/: Protocol_codes.h  Protocol_keys.h  Session.h  authorization_tcp_client.h  base_tcp_client.h  client.h  communication_tcp_client.h
networking/sources/: authorization_tcp_client.cpp  base_tcp_client.cpp  client.cpp  communication_tcp_client.cpp
qml_files/: Add_contact_menu.qml  Contacts_list.qml  Create_dialog.js  My_contacts_list.qml  My_dialog.qml  main.qml
qml_files/buttons/: Add_contact_btn.qml  Authorization_button.qml  Back_btn.qml  Chart_btn.qml  Main_menu_btn.qml  More_btn.qml  Return_back_btn.qml  Settings_btn.qml  Show_password_btn.qml  Update_stats_btn.qml
qml_files/delegates/: My_friends_view_alp_letter_delegate.qml  My_friends_view_user_delegate.qml
qml_files/stack_views/: Account_settings_view.qml  Account_view.qml  Add_contact_view.qml  Add_friend_view.qml  Chart_view.qml  Contacts_list.qml  File_dialog.qml  Friends_list.qml  Main_menu_view.qml  My_contacts_list.qml  My_contacts_view.qml  My_friends_view.qml  My_stat_view.qml  Rotation_message_view.qml
qml_files/stack_views/settings_views/: Change_avatar_view.qml  Change_password_view.qml
